add pic and fix typos in readme.md

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ span.Voice_name__TALd9 {
     background-color: #1E1E1E !important;
 }
 
-/* replacing everyone pictures by custom ones */
+/* replacing everyone assets by custom ones */
 img.Voice_avatar__htiqH {
     padding-right: 100px;
     box-sizing: border-box;
